salesforce/VisualForceAssignment2/src/objects/PurchaseOrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>ProductCode</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <label>PurchaseOrder</label>
        <referenceTo>PurchaseOrder__c</referenceTo>
        <relationshipLabel>PurchaseOrderLineItems</relationshipLabel>
        <relationshipName>PurchaseOrderLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <formula>if(AND(Quantity__c &lt;&gt; null,Price__c &lt;&gt; null),0,Quantity__c  * Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PurchaseOrderLineItem</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PurchaseOrderLineItems Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PurchaseOrderLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>